--- a/MicroServices/TwitterService/Cargo.toml
+++ b/MicroServices/TwitterService/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "AstralDawnStudiosWebsite"
+name = "TwitterService"
 version = "0.1.0"
 authors = ["Lars C. Finlay <larsfinlay@googlemail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rocket = "0.4.4"
